routing works but only without germanc+ names, it failed

--- a/imports/client/ui/components/login.html
+++ b/imports/client/ui/components/login.html
@@ -1,5 +1,5 @@
-<template name="login">
-	<div class="class-login">
+<template name="component_login">
+	<div class="component_login">
 		<ul>
 			<li class="login-toggle">{{> loginButtons}}</li>
 		</ul>
