fixed product routes, added some working examples

--- a/imports/client/ui/components/bread.html
+++ b/imports/client/ui/components/bread.html
@@ -1,7 +1,7 @@
 <template name="component_bread">
 	<div class="component_bread">
-		<img src="{{imageSrc this}}" alt=":)" class="bread-img" />
-		<div class="name">{{name this}}</div>
+		<img src="{{imageSrc name}}" alt=":)" class="bread-img" />
+		<div class="name">{{name}}</div>
 		<div class="descripton">{{discription this}}</div>
 		<div class="ingredients">Zutaten{{ingredients this}}}</div>
 		<div class="weight">Gewicht: {{weight this}}</div>
