added /Bestellung, listing the items in order

--- a/imports/client/ui/components/nav.html
+++ b/imports/client/ui/components/nav.html
@@ -3,9 +3,8 @@
         <div class="site-logo">
             <div class="site-title">Demeterhof Dietz</div>
         </div>
-        <div class="login-container">
-            {{ >login}}
-        </div>
+        {{> component_login}}
+        {{> component_sidenav}}
         <div class="nav-container">
             <div class="bar1"></div>
             <div class="bar2"></div>
