--- a/imports/client/ui/components/footer.html
+++ b/imports/client/ui/components/footer.html
@@ -14,8 +14,8 @@
 <template name="component_footer_contact">
     <div class="component_footer_contact">
         <!--tasks: Getreide/Milchvieh, Hofladen/Brotbacken-->
-        <div class="task-field">{{task}}</div> 
-        <div class="name">{{name}} </div>
+        <!-- <div class="task-field">{{task}}</div>  -->
+        <div class="name">Martin, Siegfried und Annegret Dietz </div>
         <div class="street">Lindlein 7</div>
         <div class="town">74575 Schrozberg</div>
         <div class="phone-number">Telefon: 07935 241</div>
