--- a/imports/client/ui/components/cartLink.html
+++ b/imports/client/ui/components/cartLink.html
@@ -1,5 +1,5 @@
 <template name="component_cart">
 	<div class="component_cart">
-		<input type="submit" value="Bestellung">
+		<i class="fa fa-shopping-cart" value="Bestellung"></i>
 	</div>
 </template>
