fixed state updating after submitting

--- a/imports/client/ui/components/order.html
+++ b/imports/client/ui/components/order.html
@@ -1,5 +1,5 @@
-<template name="component_order">
-    <div class="component_order">
+<template name="component_order_item">
+    <div class="component_order_item">
         <div classs="name"> {{name}}</div>
         <div class="amount"> Anzahl: {{amount}}</div>
         <div class="price"> Einzelpreis {{price}} €</div>
